--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<style>
 
+
+body
+{background-color: #888888}
+</style>
  <button type="buton" class="btn btn-warning target"><a href="#jump1">Top</a></button>
           <button type="button" class="btn btn-warning target"><a href="#jump2">Middle</a></button>
           <button type="button" class="btn btn-warning target"><a href="#jump3">End</a></button>
